--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -7,7 +7,9 @@
     "outDir": "lib",
     "sourceMap": true,
     "strict": true,
-    "target": "es2017"
+    "target": "es2017",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
   },
   "compileOnSave": true,
   "include": ["src"]
